<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.elena.bowlingsimulation.InstructionsActivity">
    <android.support.v4.widget.Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/instructions_title"
        android:textSize="25sp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <ScrollView
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/instructions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <android.support.v4.widget.Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <Button
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:text="@string/learn_more_button"
        android:layout_weight="1"
        android:layout_width="150dp"
        android:textSize="15sp"
        android:onClick="onLearnMoreClick"
        android:layout_height="0dp" />
    <android.support.v4.widget.Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>
