<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.elena.bowlingsimulation.PlayActivity">
    <ImageView
        android:id="@+id/pins_left_image_view"
        tools:src="@drawable/pins10"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp" />
    <Button
        android:onClick="onTurnClick"
        tools:text = "Computer's turn"
        android:background="@color/colorAccent"
        android:textSize="15sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:id="@+id/turn_button"
        android:textColor="@android:color/black"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/pins_left_image_view"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pins_left_image_view" />
    <TextView
        tools:text = "Result: Strike\n(10 pins down)"
        android:layout_width="0dp"
        android:id="@+id/result_text_view"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/turn_button"
        app:layout_constraintRight_toRightOf="@+id/pins_left_image_view" />


    <ScrollView
        android:id="@+id/score_scroll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/turn_button"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/result_text_view"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/turn_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/frame_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/frame_text"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/frame_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1" />
            <TextView
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:layout_column="1"
                android:textStyle="bold"
                android:id="@+id/player_turn_text_view"
                android:text="@string/your_turn_text"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:id="@+id/player_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"/>
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:layout_column="2"
                android:textColor="@android:color/white"
                android:id="@+id/computer_turn_text_view"
                android:text="@string/computer_turn_text"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_column="2"
                android:layout_row="1"
                android:id="@+id/computer_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </GridLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
